fix event mobile spacing

--- a/static/css/partials/_event.scss
+++ b/static/css/partials/_event.scss
@@ -148,7 +148,11 @@
 				text-transform:uppercase;
 				margin-right:8px;
 				margin-bottom: 0px;
-				line-height: 1.18;				
+				line-height: 1.18;
+				@media screen and (max-width: $sm-break) {
+					font-size:rem(11);
+				}
+	
 			}
 			
 			time {
@@ -185,7 +189,7 @@
 				width: 90%;
 				
 				@media screen and (max-width: $sm-break) {
-					margin-top: 40px;
+					margin-top: 10px;
 
 				}
 				@media screen and (max-width: $sm-break) {
@@ -226,7 +230,9 @@
 				margin-bottom: 0px;
 
 				@media screen and (max-width: $mobile-break) {
-					font-size: rem(14);
+					font-size: rem(22);
+					margin-top: 15px;
+
 				}
 			}
 
@@ -253,7 +259,7 @@
 
 			.event-details {
 				ul>li{
-					list-style-type: disc
+					list-style-type: disc;
 				}
 			}
 		}
